syntax = "proto3";

package credentialpb;

import "google/api/annotations.proto";

option go_package = "./pb/credentialpb";

message Empty {}
  
message CredentialVersionResponse {
      string version = 1;
}

message Credential {
    int64 id = 1;
    string name = 2;
    int32 type = 3;
}

message CreateCredentialRequest {
    string name = 1;
    int32 type = 2;
}

message CredentialListRequest {
    // page options
    int32 page = 1;
    int32 size = 2;

    // filter by name
    string name = 3;
}

message CredentialListResponse {
   repeated Credential list = 1;
   int32 total = 2;
}

message CreateCredentialResponse {
    int32 id =1;
    string name = 2;
    int32 type = 3;
}

message Int32Id {
    int32 id = 1;
}

service credential {
    rpc CredentialVersion(Empty) returns(CredentialVersionResponse) {
        option (google.api.http) = {
            get: "/api/v1/credential/version"
        };
    };

    rpc CreateCredential(CreateCredentialRequest) returns(CreateCredentialResponse) {
        option (google.api.http) = {
            post: "/api/v1/credential/create"
            body: "*"
        };
    }

    rpc CredentialList(CredentialListRequest) returns (CredentialListResponse) {
        option (google.api.http) = {
            get: "/api/v1/credential/list"
        };
    }

    rpc CredentialDetail(Int32Id) returns (Credential) {
        option (google.api.http) = {
            get: "/api/v1/credential/{id}"
        };
    }
}
